# psc-query

./: README.org  psc-query.cabal  stack.yaml
psc-query/: Main.hs
src/: Lib.hs
test/: Spec.hs  Test1.purs
